--- a/root/css/style.css
+++ b/root/css/style.css
@@ -449,37 +449,133 @@ li {
 }
 
 
+    /*GALERIA*/
+
+.galeria{
+    display: grid;
+    grid-template-rows: 450px 50px 450px 50px;
+    grid-template-columns: 6.5% 40% 6.5% 40% 6.5%;
+    grid-template-areas: ". ga1 . ga2 . "
+                         ".  .  .  .  . "
+                         ". ga3 . ga4 . "
+                         ".  .  .  .  . ";
+    justify-content: center;
+}
+
     /*GALERIA A*/
 
-.leyendaProyectos {
-    width: 250px;
+.proyectosNexus{
+    grid-area: ga1;
+    display: grid;
+    grid-template-rows: 50px 400px;
+    grid-template-columns: 100%;
+    grid-template-areas: "title1"
+                          "img1";
+    justify-content: center;
+}
+
+.leyendaNexus{
+    grid-area: title1;
+    width: 100%;
     height: 30px;
-    text-align: left;
+    text-align: center;
     color: black;
     font-style: normal;
     font-weight: bolder;
     font-size: 20px;
-    border-bottom: solid 2px black ;
+    border-bottom: solid 2px black;
 }
 
-.proyectos{
-    margin-top: 20px;
-    display: grid;
-    grid-template-rows: 400px;
-    grid-template-columns: 20% 35% 25% 20%;
-    grid-template-areas: ". ga2 ga3. ";
-    justify-content: center;
-    margin-bottom: 50px;
+.imagenesNexus{
+    grid-area: img1;
+    width: 100%;
 }
 
-.imagenesProyectos{
+    /*GALERIA B*/
+
+.proyectosColon{
     grid-area: ga2;
+    display: grid;
+    grid-template-rows: 50px 400px;
+    grid-template-columns: 100%;
+    grid-template-areas: "title2"
+                          "img2";
+    justify-content: center;
+}
+    
+.leyendaColon{
+    grid-area: title2;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    color: black;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
+    border-bottom: solid 2px black;
+}
+    
+.imagenesColon{
+    grid-area: img2;
     width: 100%;
 }
 
-.instagram-media{
-    width: 100%;
+    /*GALERIA C*/
+
+.proyectosDedalo{
     grid-area: ga3;
+    display: grid;
+    grid-template-rows: 50px 400px;
+    grid-template-columns: 100%;
+    grid-template-areas: "title3"
+                          "img3";
+    justify-content: center;
+}
+    
+.leyendaDedalo{
+    grid-area: title3;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    color: black;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
+    border-bottom: solid 2px black;
+}
+    
+.imagenesDedalo{
+    grid-area: img3;
+    width: 100%;
+}
+
+    /*GALERIA D*/
+
+.proyectosLangostinos{
+    grid-area: ga4;
+    display: grid;
+    grid-template-rows: 50px 400px;
+    grid-template-columns: 100%;
+    grid-template-areas: "title4"
+                          "img4";
+    justify-content: center;
+}
+    
+.leyendaLangostinos{
+    grid-area: title4;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    color: black;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
+    border-bottom: solid 2px black;
+}
+    
+.imagenesLangostinos{
+    grid-area: img4;
+    width: 100%;
 }
 
 
@@ -872,6 +968,21 @@ li {
         padding: 15px 15px 15px 15px;
         font-size: 15px;
     }
+    /*GALERIA*/
+
+    .galeria{
+        grid-template-rows: 450px 50px 450px 50px 450px 50px 450px 50px;
+        grid-template-columns: 10% 80% 10%;
+        grid-template-areas: ". ga1 ."
+                             ".  .  ."
+                             ". ga2 ."
+                             ".  .  ."
+                             ". ga3 ."
+                             ".  .  ."
+                             ". ga4 ."
+                             ".  .  .";
+    }
+
     
 }
 
@@ -973,7 +1084,7 @@ li {
     /*MEDIA SERVICIOS A*/
 
     .serviciosA{
-        grid-template-rows: 350px 200px;
+        grid-template-rows: 350px 300px;
         grid-template-columns: 15% 70% 15%;
         grid-template-areas:  ". sa3 ."
                               ". sa2. ";
@@ -1001,7 +1112,7 @@ li {
     /*SERVICIOS B*/
 
     .serviciosB{
-        grid-template-rows: 400px 200px;
+        grid-template-rows: 400px 300px;
         grid-template-columns: 15% 70% 15%;
         grid-template-areas:  ". sa3 ."
                               ". sa2. ";
@@ -1098,4 +1209,17 @@ li {
     transform: scale(1.5, 1.5)
 }
 
+.imagenesNexus:hover{
+    transform: scale(1.05, 1.05);
+}
 
+.imagenesColon:hover{
+    transform: scale(1.05, 1.05);
+}
+
+.imagenesDedalo:hover{
+    transform: scale(1.05, 1.05);
+}
+.imagenesLangostinos:hover{
+    transform: scale(1.05, 1.05);
+}
